# Mafia

./: .gitignore  README.md  main.py  pyproject.toml
backend/api/: config.py  dependencies.py  main.py  repository.py  schemas.py
backend/api/repositories/: games.py  player_status.py  players.py
backend/api/routers/: auth.py  games.py  logout.py  player_status.py  players.py  utils.py  web_socket.py
backend/api/routers/auth_metods/: helpers.py  utils.py  validation.py
backend/api/services/: games.py  player_status.py  players.py
backend/certs/: jwt-private.pem  jwt-public.pem
backend/db/: .env  alembic.ini  config.py  database.py  models.py  sql_enums.py
backend/db/migration/: env.py
backend/db/migration/versions/: 3366db38178c_initial_revision.py  505435bad943_initial_revision.py  b2992bc91b4e_initial_revision.py  ee7f3ce32175_initial_revision.py
backend/tests/: test_api.py
frontend/MafiaApp/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/MafiaApp/src/: App.vue  main.js
frontend/MafiaApp/src/components/: ButtonPlayer.vue  ButtonRole.vue  ClockArea.vue  ControlArea.vue  FunctionButtons.vue  GameComponent.vue  PlayerButtons.vue  PlayerDropdown.vue  RoleAllocationButtons.vue
frontend/MafiaApp/src/constants/: enums.js
frontend/MafiaApp/src/domain/: api-client.js
frontend/mafia-app/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  vite.config.mts  vite.config.ts
frontend/mafia-app/src/: App.vue  components.d.ts  main.ts  style.css  typed-router.d.ts
(+28 files in other folders)
